--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -1,38 +1,37 @@
 <%- include('../layout/headerHTML')-%>
 <link rel="stylesheet" type="text/css" href="../../public/css/orderConfirmation.css">
-
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
+<link rel="stylesheet" href="../../public/css/table.css">
 </head>
 <body>
     <%- include('../layout/header')-%>
-    
         <%if(orders.length>0){%>
-          <div class="text-center text-dark mt-4" style=" font-family: 'Michroma', sans-serif;">
-            <h3>All Orders</h3>
-        </div>
-          
-    <div class="container mt-2" style="border: 1px solid black ; padding: 10px; background-color: #212529; border-radius: 20px; min-width: 600px;">
-        
-        <table class="table table-dark table-striped" style=" font-family: 'Michroma', sans-serif;">
-            <thead class="" style="height: 60px;text-align: center; align-items: center;">
+    <div class="container mt-4" style="border: 1px solid black ; padding: 10px; background-color: #212529; border-radius: 20px;">
+      <div class="text-center text-white mt-2 " style=" font-family: 'Michroma', sans-serif;">
+        <h3>All Orders</h3>
+    </div>
+    <div class="table-responsive">
+        <table class="table table-dark table-striped" id="ordersTable" style=" font-family: 'Michroma', sans-serif;">
+            <thead class="mt-2" style="height: 60px;text-align: center; align-items: center;">
               <tr>
                 <th scope="col">No :</th>
-                <th scope="col" style="width: 150px;">Images</th>
+                <th scope="col" id="imageTableRow" style="width: 150px;">Images</th>
                 <th scope="col">Amount</th>
                 <th scope="col">Date</th>
                 <th scope="col">Status</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody> 
                 <%let i=1%>
                 <% orders.forEach(order => { %>
-                <tr>
+                <tr style="background-color:inherit  !important;">
                     <th scope="row" style="text-align: center;"><%=i%></th>
                     <%var pros=order.products.items.length-1%>
                     <% order.products.items.forEach((item, index) => { %>
                         <% if (index === 0) { %>
-                          <td style="max-width: 150px; text-align: center; display: grid; ">
+                          <td style="width: 100%; text-align: center; display: grid; place-items: center; ">
                             <a href="/user/orderDetailed?id=<%= order._id %>">
-                              <img style="border-radius: 20px; margin-top: 10px;" src="<%= item.product.images[0] %>" alt="Product Image" class="card-img-top">
+                              <img style="border-radius: 20px; margin-top: 10px; max-width: 150px;" src="<%= item.product.images[0] %>" alt="Product Image" class="card-img-top">
                             </a>
                            <%if(pros>0){%>
                             <span>+ <%=pros%> more</span>
@@ -63,6 +62,7 @@
                 <% }); %>
             </tbody>
           </table>
+        </div>
     </div><%} else {%>
       <div class="text-center text-dark mt-4" style=" font-family: 'Michroma', sans-serif;">
         <h3>No Orders!</h3>
@@ -70,7 +70,14 @@
     <%}%>
      <div class="footerA">
             <p>&copy; 2023 Rare Kicks. All rights reserved.</p>
-        </div>
+    </div>
+    <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
+    <script>
+      jQuery(document).ready(function($) {
+          $('#ordersTable').DataTable();
+      });
+    </script>
+  
     <%- include('../layout/footer')-%>
     <%- include('../layout/footerHTML')-%>
 
