--- a/views/admin/orderDetailed.ejs
+++ b/views/admin/orderDetailed.ejs
@@ -221,7 +221,7 @@
                   </tbody>
           </table>
           <div class="d-flex justify-content-end"><a class="btn btn-danger rounded-pill me-2" href="/admin/editOrders?id=<%=order._id%>">edit</a>
-            <a id="<%=order._id%>"  class="btn btn-danger rounded-pill py-2 px-3 deleteButton">Delete Order</a></div>
+            </div>
         </div>
     <div class="container mb-3" style="background-color: #212529; padding: 10px; border-radius: 20px; min-width: 400px;">
         <table class="table table-dark">
