--- a/views/admin/adminUserManagement.ejs
+++ b/views/admin/adminUserManagement.ejs
@@ -1,7 +1,8 @@
 <%- include('../layout/headerHTML')-%>
 <link rel="stylesheet" type="text/css" href="../../public/css/adminHome.css">
 <link rel="stylesheet" type="text/css" href="../../public/css/card.css">
-
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
+<link rel="stylesheet" href="../../public/css/table.css">
 </head>
 <body>
     <%- include('../layout/adminHeader')-%>
@@ -33,42 +34,65 @@
             </div>
         </div>
         <div class="container mt-2 p-4" style="  border-radius: 20px; padding: 20px; background-color: rgba(255, 255, 255, 0.635);">
-            <h2 style="font-family: 'Michroma', sans-serif;">Users</h2>
             <div class="row row-cols-1 row-cols-xl-3 row-cols-md-2 g-2 d-flex" style="justify-content: center;">
               <% if (users=='') { %>
                 <h2 class="text-center">No Users!</h2>
               <% } %>
               
               <% if (users) { %>
-     
-              <% users.forEach((user,index)=>{%>
-        <a href="/admin/detailedUser?id=<%=user._id%>" style="text-decoration: none; color: rgb(0, 0, 0);">
-                <div class="col w-100" style="    font-family: 'Roboto', sans-serif;">
-                  <div class="card " style="padding: 20px; width: 100% !important; height: min-content; overflow-wrap: break-word !important; overflow-wrap: break-word; ">
-                    <i class="fa-solid fa-person-walking-luggage " style="font-size: 30px; margin: 0px; padding: 0px;"> <%=index+1%> :</i>
-                    <div class="card-body" style="display: flex; justify-content: space-around; gap: 10px; flex-wrap: wrap;">
-                      <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Name : </span><%= user.name%></span>
-                      <span class="card-title d-block" style="overflow-wrap: break-word; word-break: break-all;">
-                          <span style="font-size: 17px; font-weight: 700;">Email : </span><%= user.email%>
-                      </span>
-                      <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Contact : </span><%= user.contact%></span>
-                      <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Registered On : </span><%= moment(user.createdAt).fromNow()%></span>
-                  </div>
-                    <div class=" d-flex align-item-center justify-content-end me-4" style="flex-wrap: wrap; row-gap: 10px;">
-                        <a href="/admin/editUser?id=<%=user._id%>" class="btn btn-dark rounded-pill px-3 me-3"><i class="fa-solid fa-pencil "></i></a>
-                        <a href="/admin/deleteUser?id=<%=user._id%>" class="btn btn-danger  me-3 rounded-pill px-3"  id="button" onclick="handleButtonClick()" ><i class="fa-regular fa-trash-can "></i></a>
-                        <a href="/admin/blockUser?id=<%=user._id%>" class="btn btn-warning rounded-pill px-3" id="button" onclick="handleButtonClick()" ><%=user.isBlocked?"Unblock":"Block"; %></a>
-                      </div>
-                    </div>
-                  </div>
-                </a>          
-                  <%})%>
+                <div class="bg-dark p-3 w-100 table-responsive " style="border-radius: 20px;">
+            <h3 class="text-center text-light " style="font-family: 'Michroma', sans-serif;">Users ( <%=users.length%> )</h3>
+                <table class="table table-striped table-borderless table-dark " id="ordersTable">
+                  <thead>
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Name</th>
+                      <th scope="col">Email</th>
+                      <th scope="col">Contact</th>
+                      <th scope="col">Registered On</th>
+                      <th scope="col">Actions</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <% users.forEach(function(user, index) { %>
+                      <tr>
+                        <th scope="row"><%= index + 1 %></th>
+                        <td style="text-overflow: ellipsis !important;"><%= user.name %></td>
+                        <td style="text-overflow: ellipsis !important;"><%= user.email %></td>
+                        <td style="text-overflow: ellipsis !important;"><%= user.contact %></td>
+                        <td><%= moment(user.createdAt).fromNow() %></td>
+                        <td>
+                          <a href="/admin/detailedUser?id=<%=user._id%>" class="btn me-1" style="text-decoration: none; color: rgb(0, 0, 0);">
+                            <i class="fa-regular fa-eye text-white "></i>
+                          </a>
+                          <a href="/admin/blockUser?id=<%= user._id %>" class="btn me-1" id="button" onclick="handleButtonClick()">
+                            <% if (user.isBlocked) { %>
+                              <i class="fa-solid fa-user-large-slash text-white "></i>
+                            <% } else { %>
+                              <i class="fa-solid fa-user-large text-white "></i>
+                            <% } %>
+                          </a>
+                          <a href="/admin/editUser?id=<%= user._id %>" class="btn">
+                            <i class="fa-solid fa-pencil text-white "></i>
+                          </a>
+                        </td>
+                      </tr>
+                    <% }); %>
+                  </tbody>
+                </table>
+              </div>
               <% } else { %>
                 <h2 class="text-center">No Users</h2>
               <% } %>
               </div> 
         </div>
 </div>
+<script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
+<script>
+  jQuery(document).ready(function($) {
+      $('#ordersTable').DataTable();
+  });
+</script>
 <script src="../../public/jsFiles/searchVal.js"></script>
 <%- include('../layout/footer')-%>
 <%- include('../layout/footerHTML')-%>
