--- a/views/admin/detailedUser.ejs
+++ b/views/admin/detailedUser.ejs
@@ -30,11 +30,15 @@
                         <i class="fa-solid fa-cubes"></i> Orders : 
                       </span></span>
                       <p style="margin-top: 10px;">
-                        <%orders.forEach(order=>{%>
+                        <%if(orders.length>0){%>
+                          <%orders.forEach(order=>{%>
                             <a href="/admin/orderDetailed?id=<%=order._id%>" style=" color: black;">
                                 <p style="padding: 0px; margin: 0px;"><%=order.orderId%> (<%=moment(order.createdAt).format('YYY,MM,DD')%>)</p>
                             </a>
-                            <%})%>
+                          <%})%>
+                        <%}else{%>
+                          <span>No Orders.</span>
+                        <%}%>
                       </p>
                     </span>
                       <span class="card-title d-block" style="overflow-wrap: break-word; word-break: break-all;">
@@ -54,9 +58,14 @@
                       </span>
                   </div></div>
                     <div class=" d-flex align-item-center justify-content-end me-4">
-                        <a href="/admin/editUser?id=<%=user._id%>" class="btn btn-dark rounded-pill px-3"><i class="fa-solid fa-pencil "></i></a>
-                        <a href="/admin/deleteUser?id=<%=user._id%>" class="btn btn-danger ms-3 me-3 rounded-pill px-3"  id="button" onclick="handleButtonClick()" ><i class="fa-regular fa-trash-can "></i></a>
-                        <a href="/admin/blockUser?id=<%=user._id%>" class="btn btn-warning rounded-pill px-3" id="button" onclick="handleButtonClick()" ><%=user.isBlocked?"Unblock":"Block"; %></a>
+                        <a href="/admin/editUser?id=<%=user._id%>" class="btn btn-dark rounded-circle me-2"><i class="fa-solid fa-pencil "></i></a>
+                        <a href="/admin/blockUser?id=<%= user._id %>" class="btn btn-dark rounded-circle " id="button" onclick="handleButtonClick()">
+                          <% if (user.isBlocked) { %>
+                              <i class="fa-solid fa-user-large-slash"></i>
+                          <% } else { %>
+                              <i class="fa-solid fa-user-large"></i>
+                          <% } %>
+                      </a>
                       </div>
                     </div>
                   
