--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -46,7 +46,7 @@
               </div>
               <div class="offcanvas offcanvas-start bg-dark" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop" aria-labelledby="staticBackdropLabel" data-bs-scroll="true" style="overflow: visible;">
                 <div class="offcanvas-header">
-                  <h5 class="offcanvas-title text-center text-light capitalizeFirst" id="staticBackdropLabel" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 200px;"><i class="fa-regular fa-circle-user me-2 my-auto"></i>
+                  <h5 class="offcanvas-title text-center text-light capitalizeFirst" id="staticBackdropLabel" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 200px;"><i class="fa-regular fa-circle-user me-2 fs-4 my-auto"></i>
                   <span class="userName"></span></h5>
                   <button type="button" class="btn-close" id="closeButton" data-bs-dismiss="offcanvas" aria-label="Close" style="font-size: 30px; margin: 10px;"></button>
                 </div>
