--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -1,6 +1,6 @@
 <%- include('../layout/headerHTML')-%>
 <link rel="stylesheet" type="text/css" href="../../public/css/orderConfirmation.css">
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css">
 <link rel="stylesheet" href="../../public/css/table.css">
 </head>
 <body>
@@ -14,18 +14,18 @@
         <table class="table table-dark table-striped" id="ordersTable" style=" font-family: 'Michroma', sans-serif;">
             <thead class="mt-2" style="height: 60px;text-align: center; align-items: center;">
               <tr>
-                <th scope="col">No :</th>
-                <th scope="col" id="imageTableRow" style="width: 150px;">Images</th>
-                <th scope="col">Amount</th>
-                <th scope="col">Date</th>
-                <th scope="col">Status</th>
+                <th scope="col" class="text-center ">No :</th>
+                <th scope="col" class="text-center " id="imageTableRow" style="width: 150px;">Images</th>
+                <th scope="col" class="text-center ">Amount</th>
+                <th scope="col" class="text-center ">Date</th>
+                <th scope="col" class="text-center ">Status</th>
               </tr>
             </thead>
             <tbody> 
                 <%let i=1%>
                 <% orders.forEach(order => { %>
                 <tr style="background-color:inherit  !important;">
-                    <th scope="row" style="text-align: center;"><%=i%></th>
+                    <th scope="row" style="text-align: center; vertical-align: middle;"><%=i%></th>
                     <%var pros=order.products.items.length-1%>
                     <% order.products.items.forEach((item, index) => { %>
                         <% if (index === 0) { %>
@@ -71,7 +71,7 @@
      <div class="footerA">
             <p>&copy; 2023 Rare Kicks. All rights reserved.</p>
     </div>
-    <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
+    <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
     <script>
       jQuery(document).ready(function($) {
           $('#ordersTable').DataTable();
