--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -1,5 +1,6 @@
 <%- include('../layout/headerHTML')-%>
 <link rel="stylesheet" type="text/css" href="../../public/css/addProduct.css">
+<link rel="stylesheet" type="text/css" href="../../public/css/loader.css">
 
 </head>
 <body>
@@ -7,6 +8,9 @@
         <a href="/admin/productList">
             <button class="btn btn-dark">Back</button>
         </a>
+    </div>
+    <div class="loading-screen">
+        <span class="loader"></span>
     </div>
     <div class="container mainCont" >
         <h3 class="mt-3 text-center mb-3" style="font-family: 'Michroma', sans-serif;">Add Product</h3>
