--- a/views/admin/brandBasedAdmin.ejs
+++ b/views/admin/brandBasedAdmin.ejs
@@ -74,7 +74,13 @@
                             </div>
                             <div class="d-flex justify-content-end mt-auto pb-2" style="gap: 10px;">
                                 <a href="/admin/editProduct?id=<%= product._id %>" class="btn btn-dark rounded-pill px-3"><i class="fa-solid fa-pencil"></i></a>
-                                <a href="/admin/deleteProduct?id=<%= product._id %>" class="btn btn-warning rounded-pill px-3" id="button" onclick="handleButtonClick()"><%= product.deleted ? "Show" : "Hide"; %></a>
+                                <a class="showHideButton btn btn-warning rounded-pill px-3" id="<%= product._id %>">
+                                  <%if(product.deleted){%>
+                                      <i class="bi bi-eye-slash"></i>
+                                      <%}else{%>
+                                        <i class="bi bi-eye"></i>
+                                  <%}%>
+                              </a>
                             </div>
                         </div>
                     </div>
@@ -90,5 +96,6 @@
               </div>
         </div>
 </div>
+<script src="../../public/jsFiles/adminProductManagement.js"></script>
 <%- include('../layout/footer')-%>
 <%- include('../layout/footerHTML')-%>
