--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -61,8 +61,14 @@
                 <p class="ps-2 pe-2 pb-2 text-break overflow-auto word-wrap"><%= category.description %></p>
               </div>
               <div class="d-flex" style="justify-content: end; align-self: baseline;">
-                  <a href="/admin/editCategory?id=<%=category._id%>" class="btn btn-dark rounded-pill px-3"><i class="fa-solid fa-pencil"></i></a>
-                  <a href="/admin/deleteCategory?id=<%=category._id%>" class="btn ms-2 btn-danger rounded-pill px-3" id="button" onclick="handleButtonClick()" ><%=category.deleted?"Show":"Hide"; %></a>
+                  <a href="/admin/editCategory?id=<%=category._id%>" class="editCategoryButton btn btn-dark rounded-pill px-3"><i class="fa-solid fa-pencil"></i></a>
+                  <a class="btn ms-2 btn-danger rounded-pill px-3 showHideButton" id="<%=category._id%>" >
+                    <%if(category.deleted){%>
+                      <i class="bi bi-eye-slash"></i>
+                      <%}else{%>
+                        <i class="bi bi-eye"></i>
+                        <%}%>
+                  </a>
                 </div>
               </div>
             <%})%>
