--- a/views/admin/coupon.ejs
+++ b/views/admin/coupon.ejs
@@ -78,7 +78,13 @@
                                         </div>
                                         <div class="d-flex" style="justify-content: end; align-self: baseline;">
                                             <a href="/admin/editCouponShow?id=<%= coupon._id %>" class="btn btn-success px-3 rounded-pill"><i class="fa-solid fa-pencil"></i></a>
-                                            <a href="/admin/hideCoupon?id=<%= coupon._id %>" class="btn ms-2 btn-warning px-3 rounded-pill" id="button" onclick="handleButtonClick()"><%= coupon.isActive ? "Disable" : "Enable"; %></a>
+                                            <a class="showHideButton btn ms-2 btn-warning px-3 rounded-pill" id="<%= coupon._id %>">
+                                                <%if(coupon.isActive){%>
+                                                    <i class="bi bi-eye"></i>
+                                                    <%}else{%>
+                                                        <i class="bi bi-eye-slash"></i>
+                                                <%}%>
+                                            </a>
                                         </div>
                                     </div>
                                     
