--- a/views/admin/productList.ejs
+++ b/views/admin/productList.ejs
@@ -40,7 +40,7 @@
       <div class="container mt-1 p-4" style="background-color: #e9ddf300 !important;  border: 1px solid rgba(166, 166, 166, 0); border-radius: 30px;  padding: 20px;">
             <div class="row row-cols-1 row-cols-xl-3 row-cols-md-2 g-4  d-flex" style="justify-content: center;">
               <% if (products=='') { %>
-                <h2 class="text-center">No Such Products</h2>
+                <h2 class="text-center mainFontFamily">No Such Products</h2>
               <% } %>
               
               <% if (products) { %>
@@ -68,19 +68,26 @@
                             </div>
                             <div class="d-flex justify-content-end mt-auto pb-2" style="gap: 10px;">
                                 <a href="/admin/editProduct?id=<%= product._id %>" class="btn btn-dark rounded-pill px-3"><i class="fa-solid fa-pencil"></i></a>
-                                <a href="/admin/deleteProduct?id=<%= product._id %>" class="btn btn-warning rounded-pill px-3" id="button" onclick="handleButtonClick()"><%= product.deleted ? "Show" : "Hide"; %></a>
+                                <a class="showHideButton btn btn-warning rounded-pill px-3" id="<%= product._id %>">
+                                    <%if(product.deleted){%>
+                                        <i class="bi bi-eye-slash"></i>
+                                        <%}else{%>
+                                          <i class="bi bi-eye"></i>
+                                    <%}%>
+                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
                   <%})%>
               <% } else { %>
-                <h2 class="text-center">No Such Products</h2>
+                <h2 class="text-center" style="font-family: 'Michroma', sans-serif !important;">No Such Products</h2>
               <% } %>
               </div> 
         </div>
 </div>
 <%- include('../layout/alert')%>
 <script src="../../public/jsFiles/searchVal.js"></script>
+<script src="../../public/jsFiles/adminProductManagement.js"></script>
 <%- include('../layout/footer')-%>
 <%- include('../layout/footerHTML')-%>
