--- a/views/user/detailedProduct.ejs
+++ b/views/user/detailedProduct.ejs
@@ -109,10 +109,11 @@
                         </p>
                     <% } %>
                 </div>
-                <% if(product?.sizes.length>0 && product?.quantity>0){%>
+                <% if(product?.sizes.length>0 && product?.quantity>0 && !product.deleted){%>
                     <a href="" id="<%=product?._id%>" class="addToCart btn btn-dark d-flex justify-content-center mt-4 pt-1 pb-1 mb-2" ><h3 style=" font-family: 'Michroma', sans-serif;">Add To Cart</h3></a>
-
-                <%} %>
+                <%} else {%>
+                    <a  class=" btn btn-dark d-flex justify-content-center mt-4 pt-1 pb-1 mb-2" ><h3 class="text-danger " style=" font-family: 'Michroma', sans-serif;">Not Available !</h3></a>
+                    <%}%>
                 <p class="" style="font-family: 'Michroma', sans-serif; font-size: 20px;" ><span class="fs-4">Brand : </span><%=product?.brand%></p>
                 <p class="" style="font-family: 'Michroma', sans-serif; font-size: 20px;" ><span class="fs-4">Category : </span><%=product?.category?.name%></p>
                 <h3 class="mt-3" style="font-family: 'Michroma', sans-serif; ">About Product : </h3>
