--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -16,11 +16,11 @@
             </div>
             <div class="right">
                 <div class="productCounter">
-                <a href="/user/wishlist/" class=""><i class="bi bi-heart-fill"></i></i</a>
-                <span class="wishlistCount" id="wishCount"></span></div>
+                <a href="/user/wishlist" class=""><i class="bi bi-heart-fill"></i></i</a>
+                <span class="wishlistCount" id="wishCount">0</span></div>
                 <div class="productCounter">
-                <a href="/user/cart/" class=""><i class="bi bi-bag-fill"></i></i></i</a>
-                <span class="cartCount" id="cartCount"></span></div>
+                <a href="/user/cart" class=""><i class="bi bi-bag-fill"></i></i></i</a>
+                <span class="cartCount" id="cartCount">0</span></div>
                 <span class="profileMan">
                 <a class="text-dark " data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop"><i class="profileIcon text-center bi bi-person-circle " style=" font-size: 50px; cursor: pointer;"></i></i</a></span>
             </div>
@@ -38,6 +38,7 @@
                   <li class="text-center hover  pb-4 ps-3 pe-3"><a class="" href="/user/brandBased/">All Brands</a></li>
                   <li class="text-center hover pb-4 ps-3 pe-3"><a class=" " href="/user/brand?brand=adidas">ADIDAS</a></li>
                   <li class="text-center hover pb-4 ps-3 pe-3"><a class=" " href="/user/brand?brand=reebok">REEBOK</a></li>
+                  <li class="text-center hover pb-4 ps-3 pe-3"><a class=" " href="/user/brand?brand=nike">NIKE</a></li>
                   <li class="text-center hover pb-4 ps-3 pe-3"><a class=" " href="/user/brand?brand=jordan">JORDAN</a></li>
                   <li class="text-center hover pb-4 ps-3 pe-3"><a class=" " href="/user/brand?brand=asics">ASICS</a></li>
                   <li class="text-center hover pb-4 ps-3 pe-3"><a class=" " href="/user/brand?brand=crocs">CROCS</a></li>
