--- a/views/user/brandBased.ejs
+++ b/views/user/brandBased.ejs
@@ -39,6 +39,7 @@
                             <li class="text-center hover  pb-4 ps-3 pe-3"><a href="/user/brand?brand=jordan">JORDAN</a></li>
                             <li class="text-center hover  pb-4 ps-3 pe-3"><a href="/user/brand?brand=asics">ASICS</a></li>
                             <li class="text-center hover  pb-4 ps-3 pe-3"><a href="/user/brand?brand=crocs">CROCS</a></li>
+                            <li class="text-center hover  pb-4 ps-3 pe-3"><a href="/user/brand?brand=nike">NIKE</a></li>
                             <li class="text-center hover  ps-3 pe-3"><a href="/user/brand?brand=converse">CONVERSE</a></li>
                         </ul>
                     </div>
