--- a/views/user/allProducts.ejs
+++ b/views/user/allProducts.ejs
@@ -39,6 +39,7 @@
                         <li class="text-center hover  pb-4 ps-3 pe-3"><a href="/user/brand?brand=adidas">ADIDAS</a></li>
                         <li class="text-center hover  pb-4 ps-3 pe-3"><a href="/user/brand?brand=reebok">REEBOK</a></li>
                         <li class="text-center hover  pb-4 ps-3 pe-3"><a href="/user/brand?brand=jordan">JORDAN</a></li>
+                        <li class="text-center hover  pb-4 ps-3 pe-3"><a href="/user/brand?brand=nike">NIKE</a></li>
                         <li class="text-center hover  pb-4 ps-3 pe-3"><a href="/user/brand?brand=asics">ASICS</a></li>
                         <li class="text-center hover  pb-4 ps-3 pe-3"><a href="/user/brand?brand=crocs">CROCS</a></li>
                         <li class="text-center hover  ps-3 pe-3"><a href="/user/brand?brand=converse">CONVERSE</a></li>
@@ -86,21 +87,28 @@
         <% if (products && products.length > 0) { %>
             <% products.forEach(product => { %>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card h-100 hoverCard">
                         <a href="/user/productDetailed?id=<%= product._id %>" style="color: black;">
                             <img src="<%= product.images[0]%>" class="card-img-top productImageMain" alt="..." style="position: relative;">
                         <%if(product?.discountPercentage>0){%>
                             <span class="text-white cardText"><%=product.discountPercentage%>% off</span>
                             <%}%>
-                            <div class="card-body d-flex justify-content-center discountDiv">
-                                <h5 class="card-title text-center mb-2"><%= product.name %></h5>
-                                <a href="/user/productDetailed?id=<%=product._id%>" class="btn btn-dark mt-auto rounded-pill"><%if(product?.discountPercentage&&product?.discountPercentage>0){%>
-                                    <span class="text-danger"> &#x20B9 <%= (product.price-((product?.price*product?.discountPercentage)/100)).toFixed(0)%></span>
-                                   
-                                <%}else {%>
-                                    &#x20B9 <%= product?.price%>
-                                <%}%>
+                            <div class="card-body d-flex flex-column align-items-center justify-content-center" style="font-family: 'Michroma', sans-serif;">
+                                <h5 class="card-title text-center mb-2"><%= product.name%></h5>
+                                <a href="/user/productDetailed?id=<%=product._id%>" class="btn btn-dark mt-auto rounded-pill price-btn">
+                                    <% if (product?.discountPercentage && product?.discountPercentage > 0) { %>
+                                        <span class="text-danger"> &#x20B9 <%= (product.price - ((product?.price * product?.discountPercentage) / 100)).toFixed(0)%></span>
+                                    <% } else { %>
+                                        &#x20B9 <%= product?.price%>
+                                    <% } %>
                                 </a>
+                                <button id="<%=product._id%>" class="wishlistToggle btn">
+                                    <% if (product?.wish) { %>
+                                        <i class="bi bi-heart-fill" style="font-size: 40px;"></i>
+                                    <% } else { %>
+                                        <i class="bi bi-heart" style="font-size: 40px;"></i>
+                                    <% } %>
+                                </button>
                             </div>
                         </a>
                     </div>
@@ -136,6 +144,7 @@
         </nav>
     </div>
 <%}%>
+<script src="../../public/jsFiles/addToWishlist.js"></script>
 <%- include('../layout/adText')-%>
 <%- include('../layout/footer')-%>
 <%- include('../layout/footerHTML')-%>
