--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -7,7 +7,7 @@
     <%- include('../layout/header')-%>
     <div class="container d-flex mb-4 mt-2 mainContainer">
         <h2 class="text mainFontFamily"><u>Cart!</u></h2>
-        <a href="/user/wishlist/" class="btn btn-dark rounded"><h4 class="mainFontFamily" style="margin-top: 5px;">Go To Wishlist</h4></a>
+        <a href="/user/wishlist" class="btn btn-dark rounded"><h4 class="mainFontFamily" style="margin-top: 5px;">Go To Wishlist</h4></a>
     </div>
     <script>let checkProductAvailability=true;</script>
     <div class="container productCont productContInCart">
@@ -96,7 +96,7 @@
             <% } %>
             <% if(locals.products.length!==0) { %>
                 <div class="container d-flex justify-content-center">
-                    <a href="/user/checkOut/" class="btn btn-dark d-flex flex-column justify-content-center mt-4 pt-3 pb-3 ps-4 pe-4" style="width: fit-content; display: none !important;" id="proceedToPaymentButton" >
+                    <a href="/user/checkOut" class="btn btn-dark d-flex flex-column justify-content-center mt-4 pt-3 pb-3 ps-4 pe-4" style="width: fit-content; display: none !important;" id="proceedToPaymentButton" >
                         <h3 class="mainFontFamily" style="margin-bottom: 5px;">Total : <span class="text-danger"> &#x20B9 </span><span  class="totalPrice totalPriceText"><%=locals?.total%></span><span class="totalPriceText">&nbsp;</span></h3>
                         <h4 class="checkOutNowButton">Check Out Now</h4>
                     </a>
