--- a/views/user/homePage.ejs
+++ b/views/user/homePage.ejs
@@ -1,9 +1,10 @@
 <%- include('../layout/headerHTML')-%>
 <link rel="stylesheet" type="text/css" href="../../public/css/homePage.css">
 <link rel="stylesheet" type="text/css" href="../../public/css/card.css">
+  
 </head>
 <body>
-    <%- include('../layout/header')-%>
+<%- include('../layout/header')-%>
     <div class="container margineTop">
         <div class="row">
             <div class="col-12 imageContainer" id="imageContainer1">
@@ -51,7 +52,6 @@
                     </div>
                 <% } %>
             </div>
-            <!-- Slider Controls -->
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleSlidesOnly" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -65,29 +65,38 @@
 <div class="container mt-5 productCont">
     <h2 class="text-center mt-2 mb-4" style="  font-family: 'Michroma', sans-serif;">Products</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3  g-4 d-flex mb-5" style="justify-content: center;">
-            <% products.forEach(product=>{%>
+            <% products.forEach(product => { %>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card h-100 hoverCard">
                         <a href="/user/productDetailed?id=<%=product._id%>" class="imageCont" style="text-decoration: none; color: #000000;">
-                        <img src="<%=product.images[0]%>" class="card-img-top productImageMain" alt="..." style="position: relative;">
-                        <%if(product?.discountPercentage>0){%>
-                            <span class="text-white" style="position: absolute; top: 10px; right: 10px; font-size: 15px; background-color:#CC0C39!important; border-radius: 10px; font-weight: bold; padding:8px ;"><%=product.discountPercentage%>% off</span>
-                            <%}%>
-                        <div class="card-body d-flex justify-content-center" style="flex-direction: column; align-items: center; font-family: 'Michroma', sans-serif;">
-                            <h5 class="card-title text-center mb-2"><%= product.name%></h5>
-                        <a href="/user/productDetailed?id=<%=product._id%>" class="btn btn-dark mt-auto rounded-pill"><%if(product?.discountPercentage&&product?.discountPercentage>0){%>
-                            <span class="text-danger"> &#x20B9 <%= (product.price-((product?.price*product?.discountPercentage)/100)).toFixed(0)%></span>
-                           
-                        <%}else {%>
-                            &#x20B9 <%= product?.price%>
-                        <%}%>
+                            <img src="<%=product.images[0]%>" class="card-img-top productImageMain" alt="..." style="position: relative;">
+                            <% if (product?.discountPercentage > 0) { %>
+                                <span class="text-white discount-badge" style="position: absolute; top: 10px; right: 10px; font-size: 15px; background-color:#CC0C39!important; border-radius: 10px; font-weight: bold; padding:8px ;"><%=product.discountPercentage%>% off</span>
+                            <% } %>
+                            <div class="card-body d-flex flex-column align-items-center justify-content-center" style="font-family: 'Michroma', sans-serif;">
+                                <h5 class="card-title text-center mb-2"><%= product.name%></h5>
+                                <a href="/user/productDetailed?id=<%=product._id%>" class="btn btn-dark mt-auto rounded-pill price-btn">
+                                    <% if (product?.discountPercentage && product?.discountPercentage > 0) { %>
+                                        <span class="text-danger"> &#x20B9 <%= (product.price - ((product?.price * product?.discountPercentage) / 100)).toFixed(0)%></span>
+                                    <% } else { %>
+                                        &#x20B9 <%= product?.price%>
+                                    <% } %>
+                                </a>
+                                <button id="<%=product._id%>" class="wishlistToggle btn">
+                                    <% if (product?.wish) { %>
+                                        <i class="bi bi-heart-fill" style="font-size: 40px;"></i>
+                                    <% } else { %>
+                                        <i class="bi bi-heart" style="font-size: 40px;"></i>
+                                    <% } %>
+                                </button>
+                            </div>
                         </a>
-                    </div></a>
+                    </div>
                 </div>
-            </div>
-            <%})%>
+            <% }) %>
     </div>
 </div>
+<script src="../../public/jsFiles/addToWishlist.js"></script>
 <%-include("../layout/adText")%>
 <%-include("../layout/alert")%>
 <%- include('../layout/footer')-%>
