--- a/views/user/userLogin.ejs
+++ b/views/user/userLogin.ejs
@@ -10,8 +10,8 @@
         <div class="col-md-12">
           <label for="validationCustomUsername" class="form-label">Email</label>
           <div class="input-group has-validation">
-            <span class="input-group-text" id="inputGroupPrepend">@</span>
-            <input type="email" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" name="email" value="<%= locals?.email?email:''%>" required>
+            <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-envelope-open"></i></span>
+            <input type="email" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" name="email" value="<%= locals?.email?email:''%>" required  placeholder="Enter your email.">
             <div class="invalid-feedback">
               Enter A Valid Email !
             </div>
@@ -20,8 +20,8 @@
         <div class="col-md-12">
           <label for="validationPassword" class="form-label">Password</label>
           <div class="input-group has-validation">
-            <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-key"></i></span>
-            <input type="password" class="form-control" id="validationPassword" aria-describedby="inputGroupPrepend" name="password"  required>
+            <span class="input-group-text" id="inputGroupPrepend"><i class="fa-solid fa-fingerprint"></i></span>
+            <input type="password" class="form-control" id="validationPassword" aria-describedby="inputGroupPrepend" name="password"  required  placeholder="Enter your password.">
             <div class="invalid-feedback">
               Enter A Valid Password !
             </div>
@@ -29,14 +29,17 @@
         </div>
         <div class="save">
             <div class="d-inline">
-            <button class="btn btn-dark rounded-pill mt-2" type="submit">Login</button>
+            <button class="btn btn-dark rounded-pill mt-2 fw-bolder" type="submit">Login</button>
             </div>
         </div>
-        <div class="text-center mt-5 d-flex mx-auto" style="font-size: 15px; flex-direction: column;">
-          Don’t you have an account? 
+        <div class="text-center mt-5 d-flex mx-auto justify-content-center " style="font-size: 15px;">
+          Don’t you have an account?&nbsp;
           <a href="/user/register/" style="color: rgb(255, 0, 195); font-weight: 700;"> Sign-Up</a>
-          <div> <a href="/user/loginWithOtp" class="btn text-center btn-dark mt-2 mb-2 rounded-pill" style="width: 100px;">Otp Login</a></div>
-      </div>
+        </div>
+        <div class="d-flex justify-content-end"> 
+          <a href="/user/loginWithOtp" class="btn text-center text-warning  btn-dark mt-2 mb-2 rounded-pill" style="width: 100px;">Otp Login
+          </a>
+        </div>
       </form>
 
 </div>
