--- a/public/template/invoice.ejs
+++ b/public/template/invoice.ejs
@@ -13,58 +13,61 @@
             border: 1px solid rgb(92, 92, 92);
             border-radius: 5px;
         }
-
-        h1,h3{
+    
+        h1, h3 {
             text-align: center;
         }
-
+    
         h3 {
             margin-top: 20px;
             margin-bottom: 10px;
         }
-
+    
         address {
             margin-top: 20px;
             margin-bottom: 10px;
         }
-
+    
         table {
             width: 100%;
             /* border-collapse: collapse; */
             margin-top: 40px;
             margin-bottom: 40px;
         }
-
-        th, td {
+    
+        th {
+            border: 1px solid rgb(92, 92, 92);
+            padding: 12px;
+            text-align: center;
+        }
+    
+        td {
             border: 1px solid #ddd;
             padding: 12px;
             text-align: left;
         }
-
-        th {
-            background-color: #f2f2f2;
-        }
-
+    
         .payment-details {
             text-align: end;
             margin-top: 20px;
             margin-bottom: 10px;
         }
-
+    
         p {
             margin-top: 10px;
             margin-bottom: 10px;
         }
-
+    
         .thank-you {
             text-align: center;
             margin-top: 50px;
         }
     </style>
+    
 </head>
 <body>
     <h1 ><u>Invoice</u></h1>
-    <img src="data:image/jpeg;base64,{<%=base64str%>}" alt="Company Logo" width="100" height="100" style="border-radius: 10px;">
+    <img src="data:image/jpeg;base64,<%=base64str%>" alt="Company Logo" width="100" height="100" style="border-radius: 10px;">
 
     <address>
         <h2>Rare Kicks</h2>
@@ -86,13 +89,13 @@
         <p>Email: <%= order.address.email %></p>
     </div>
 
-    <table style="border: 2px solid rgb(0, 0, 0) !important; ">
+    <table style="border: 2px solid rgb(62, 62, 62) !important; ">
         <thead>
             <tr>
-                <th style="background-color: #0c0c4b;  color: white;">Product Name</th>
-                <th style="background-color: #0c0c4b;  color: white;">Quantity</th>
-                <th style="background-color: #0c0c4b;  color: white;">Size</th>
-                <th style="background-color: #0c0c4b;  color: white;">Price</th>
+                <th id="tableHead">Product Name</th>
+                <th id="tableHead">Quantity</th>
+                <th id="tableHead">Size</th>
+                <th id="tableHead">Price</th>
             </tr>
         </thead>
         <tbody>
