--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -22,7 +22,7 @@
                 <a href="/user/cart" class=""><i class="bi bi-bag-fill"></i></i></i</a>
                 <span class="cartCount" id="cartCount">0</span></div>
                 <span class="profileMan">
-                <a class="text-dark " data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop"><i class="profileIcon text-center bi bi-person-circle " style=" font-size: 50px; cursor: pointer;"></i></i</a></span>
+                <a class="text-dark " data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop"><i class="profileIcon bi bi-person-circle " style="cursor: pointer;"></i></i</a></span>
             </div>
         </div>
         <div class="bottomHeader container mb-3">
