--- a/views/user/otpLogin.ejs
+++ b/views/user/otpLogin.ejs
@@ -32,19 +32,21 @@
                 form.addEventListener('submit', event => {
 
                 if (!form.checkValidity()) {
+                  showAlert('Fill The Form')
                     event.preventDefault()
                     event.stopPropagation()
                 }
 
                 form.classList.add('was-validated')
                 }, false)
-            })
-            })()
-            form.addEventListener('keydown', event => {
+                form.addEventListener('keydown', event => {
             if (event.key === 'Enter') {
                 form.dispatchEvent(new Event('submit'));
             }
         });
+            })
+            })()
+            
         </script>
 
 </div>
